[package]
name = "rs-piano-midi"
version = "0.1.0"
edition = "2021"
default-run = "sketch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.1"
glam = "0.24"
memmap2 = "0.9"
midly = { version = "0.5", default-features = false, features = ["std", "alloc"] }

[[bin]]
name = "sketch"
path = "./src/main.rs"

[[bin]]
name = "midi_tool"
